crates/elenchus-parser/tests/snapshots/errors__then_without_literal.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        RULE r:\n            WHEN x a\n            THEN\n        \"#)"
---
RESULT: 1 syntax error

THEN  (1 problem)
  syntax  : THEN <literal>
  example : THEN motor uses fast_path
    line 4, col 17 - THEN expects a literal: [NOT] <Subject> <predicate> [<object>]
      |             THEN
      |                 ^
